<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <!--Take out sign in for now
    <item
        android:id="@+id/action_signin"
        android:title="@string/sign_in"
        app:showAsAction="ifRoom" />
        -->

    <item
        android:id="@+id/view_records"
        android:icon="@android:drawable/ic_menu_agenda"
        android:orderInCategory="100"
        android:title="@string/view_record"
        app:showAsAction="always"/>

    <item android:id="@+id/action_all_items"
        android:title="@string/display_all"
        app:showAsAction="ifRoom"/>
    <item android:id="@+id/action_choose_category"
        android:title="PER"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_settings"
        android:title="@string/settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_students"
        android:title="Add/Edit Students"
        app:showAsAction="ifRoom" />

</menu>