<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp" >

    <EditText
        android:id="@+id/studentid_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:hint="@string/enter_studentid"
        android:visibility="gone"/>

    <EditText
        android:id="@+id/studentper_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:onClick="setDate"
        android:hint="Behavior Date"
        android:paddingBottom="20dp"
        >
    </EditText>

    <Spinner
        android:id="@+id/studentname_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/behaviors"
        android:hint="@string/enter_name"
        android:paddingBottom="20dp"
        />
    <!--

    <EditText
        android:id="@+id/studentname_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_name"
        >
    </EditText>
    -->


    <Spinner
        android:id="@+id/spinner_consequence"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/consequences"
        android:paddingBottom="20dp"
        />

    <Spinner
        android:id="@+id/spinner_parent_contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/parent_contact"
        android:paddingBottom="20dp"
        />

    <EditText
        android:id="@+id/comments"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Comments"
        android:paddingBottom="20dp"
        />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_update" />

        <Button
            android:id="@+id/btn_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_delete" />
    </LinearLayout>

</LinearLayout>