<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp" >

    <EditText
        android:id="@+id/behaviorid_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:ems="10"
        android:hint="@string/behavior_id" >
    </EditText>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Date:" />

    <EditText
        android:id="@+id/behaviordate_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/behavior_date"
        android:onClick="setDate"
        android:paddingBottom="20dp">

    </EditText>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Behavior:" />


    <Spinner
        android:id="@+id/behaviorname_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/behaviors"
        android:hint="@string/behavior_name1"
        android:paddingBottom="20dp"
        />
<!--
    <EditText
        android:id="@+id/behaviorname_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/behavior_name1"
         >
    </EditText>
-->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Consequence:" />


    <Spinner
        android:id="@+id/spinner_consequence"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp"
        />
    <!--android:entries="@array/consequences"-->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Contact:" />


    <Spinner
        android:id="@+id/spinner_parent_contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/parent_contact"
        android:paddingBottom="20dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Comment:" />


    <EditText
        android:id="@+id/et_comments"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Comments"
        android:paddingBottom="20dp"
        />

    <Button
        android:id="@+id/add_record"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/add_record" />

</LinearLayout>